# dump

./: README.md
app/: .firebaserc  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/debug/: AndroidManifest.xml
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/app/: MainActivity.kt
app/ios/: .gitignore  Podfile
app/ios/Runner/: Info.plist  bindings.h  foo.c  foo.h
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: entry.dart  entry_edit.dart  fixed_split.dart  journal.dart  login.dart  main.dart  menu.dart  menu_stream.dart  model.dart  models.dart  shortcuts.dart  srv_bindings.dart  stream.dart
app/macos/: .gitignore  Podfile  libsrv.dylib
app/macos/Runner/: Info.plist
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
srv/: .gitignore  Cargo.toml  README.md  cbindgen.toml
srv/src/: db.rs  google.rs  lib.rs  models.rs
